// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18n props processes float="end" 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": "right",
      "height": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": "relative",
      "right": undefined,
      "textAlign": undefined,
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`i18n props processes float="end" 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": "left",
        "height": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "position": "relative",
        "right": undefined,
        "textAlign": undefined,
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`i18n props processes float="start" 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": "left",
      "height": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": "relative",
      "right": undefined,
      "textAlign": undefined,
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`i18n props processes float="start" 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": "right",
        "height": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "position": "relative",
        "right": undefined,
        "textAlign": undefined,
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`i18n props processes marginStart/marginEnd 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": undefined,
      "height": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": 10,
      "marginRight": 11,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": "relative",
      "right": undefined,
      "textAlign": undefined,
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`i18n props processes marginStart/marginEnd 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": undefined,
        "height": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": 11,
        "marginRight": 10,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "position": "relative",
        "right": undefined,
        "textAlign": undefined,
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`i18n props processes paddingStart/paddingEnd 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": undefined,
      "height": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": 10,
      "paddingRight": 11,
      "paddingTop": undefined,
      "position": "relative",
      "right": undefined,
      "textAlign": undefined,
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`i18n props processes paddingStart/paddingEnd 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": undefined,
        "height": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": 11,
        "paddingRight": 10,
        "paddingTop": undefined,
        "position": "relative",
        "right": undefined,
        "textAlign": undefined,
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`i18n props processes positionStart/positionEnd 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": undefined,
      "height": undefined,
      "left": 10,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": "relative",
      "right": 11,
      "textAlign": undefined,
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`i18n props processes positionStart/positionEnd 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": undefined,
        "height": undefined,
        "left": 11,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "position": "relative",
        "right": 10,
        "textAlign": undefined,
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`i18n props processes textAlign="end" 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": undefined,
      "height": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": "relative",
      "right": undefined,
      "textAlign": undefined,
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
  testAlign="end"
/>
`;

exports[`i18n props processes textAlign="end" 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": undefined,
        "height": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "position": "relative",
        "right": undefined,
        "textAlign": "left",
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`i18n props processes textAlign="start" 1`] = `
<div
  style={
    Object {
      "bottom": undefined,
      "display": undefined,
      "float": undefined,
      "height": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": "relative",
      "right": undefined,
      "textAlign": "left",
      "top": undefined,
      "verticalAlign": undefined,
      "whiteSpace": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`i18n props processes textAlign="start" 2`] = `
<div
  dir="rtl"
>
  <div
    style={
      Object {
        "bottom": undefined,
        "display": undefined,
        "float": undefined,
        "height": undefined,
        "left": undefined,
        "marginBottom": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
        "position": "relative",
        "right": undefined,
        "textAlign": "right",
        "top": undefined,
        "verticalAlign": undefined,
        "whiteSpace": undefined,
        "width": undefined,
      }
    }
  />
</div>
`;
